--- a/Agenda/Agenda.DAL/Agenda.DAL.csproj
+++ b/Agenda/Agenda.DAL/Agenda.DAL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
